--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -15,9 +15,12 @@
     color: #1B1C21;
 
 }
-
+a {
+    text-decoration: none !important;
+}
 .right-links span {
     font-size: 12px;
+    color: #1B1C21;
     letter-spacing: 1px;
     line-height: 26px;
     font-family: 'Raleway';
