--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -240,3 +240,98 @@
         justify-content: center;
     }
 }
+
+@media (max-width: 767px) {
+    .footer-leaf {
+        width: 150px;
+        height: 150px;
+        right: 39%;
+    }
+
+    .second-leaf {
+        right: 0%;
+    }
+
+    .newsletter-signup h3 {
+        font-size: 20px;
+    }
+
+    .input-group input {
+        font-size: 13px;
+    }
+
+    .footer-main-section {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+
+    .footer-links {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        /* Two columns */
+        gap: 20px;
+        /* Add spacing between columns */
+        width: 100%;
+    }
+
+    .footer-column {
+        width: 100%;
+        /* Ensures each column fits properly in grid */
+        padding: 0;
+        /* Center-align content for better presentation */
+    }
+
+    .footer-column h5 {
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+
+    .footer-column ul li {
+        padding-bottom: 10px;
+    }
+
+    .footer-column ul li a {
+        font-size: 13px;
+    }
+
+    .footer-links::after {
+        display: none;
+        /* Remove vertical line in smaller screens */
+    }
+
+    .footer-bottom {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        padding-left: 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    .footer-logo img {
+        width: 100px;
+    }
+
+    .social-links {
+        display: flex;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .footer-policy-links {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    .footer-policy-links a {
+        font-size: 12px;
+    }
+
+    .end_title p {
+        font-size: 12px;
+        text-align: center;
+    }
+}
