--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,21 @@
-
-
 .container {
   max-width: 1310px !important;
   padding-right: 15px;
   padding-left: 15px;
   margin: auto;
+}
+
+*,
+::after,
+::before {
+  box-sizing: border-box;
+
+}
+
+@media (max-width:767px) {
+  .container {
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
